assets/styles/add.css
.inner {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
  max-width: none;
  padding: none;
}

#home_banner {
    display: block;
    position: absolute;
    top:0;
    right: 10px;
    z-index: 10;
    padding: 10px 10px 10px 10px;
    color: #fff;
    background: dodgerblue;
    font-weight: 700;
    box-shadow: 0 0 10px rgba(0,0,0,.5);
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
  }

.container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
}
.container img {
  width: 150px;
}

  /* Style buttons */
.btn {
  background-color: DodgerBlue; /* Blue background */
  border: none; /* Remove borders */
  color: white; /* White text */
  padding: 10px;; /* Some padding */
  margin: 10px;
  font-size: 16px; /* Set a font size */
  cursor: pointer; /* Mouse pointer on hover */
}

